--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+			"http://www.w3.org/TR/html4/strict.dtd">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<html>
+	<head>
+		<title>joão</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+	
+	<body>
+		<h1>joão victor de jesus</h1>
+
+		<div class="secao">
+			<p>não é porque eu estou sorrindo que estou feliz</p>
+		</div>
+
+		<div class="secao">
+			<h2>jao_0105</h2>			
+				<div id="hcard-Ademir-Mazer-Jr" class="vcard">
+				  <img src="http://br.gravatar.com/userimage/14935412/cef5ab9d2ae46b1f6371dddbc99f667e.jpg?size=200" alt="photo of Ademir" class="photo"/>
+				
+				 <a class="email" href="mailto:ademir.mazer.jr@gmail.com">ademir.mazer.jr@gmail.com</a>
+				 <a class="url" href="http://ademir.winponta.com.br">http://ademir.winponta.com.br</a>
+			
+				</div>
+		</div>
+
+		<div class="secao">
+			<h2>minhas musicas favoritas</h2>
+			
+			<p>ama o jeito que me odeia</p>
+			<p>toxic</p>
+			<p>lil tjay-run it up slowed</p>
+		</div>
+
+		<div class="secao">
+			<h2>Minhas maiores habilidades</h2>
+			<p>aprender rapido</p>
+			<p>seguir regras e ordens</p>
+			<p>ser pontual e responsavel</p>
+		</div>
+
+		<div class="secao">
+			<h2>Pessoas mais importantes pra mim</h2>
+			<p>mãe</p>
+			<p>avós</p>
+			<p>esposa</p>
+		</div>
+
+		<div class="secao">
+			<h2> meus filmes favoritos</h2>
+			<p> o hobbit</p>
+			<p>senhor dos aneis</p>
+			<p>como eu era antes de você</p>
+		</div>
+		
+		<div id="footnote">
+			
+			<li>Este site foi criado para a disciplina de Programação  do 2º Ano d do Colégio CQC</li>
+		</div>		
+	</body>
+</html>
+
 
