--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="secao">
 			<h2>jao_0105</h2>			
 				<div id="hcard-Ademir-Mazer-Jr" class="vcard">
-				  <img src="http://br.gravatar.com/userimage/14935412/cef5ab9d2ae46b1f6371dddbc99f667e.jpg?size=200" alt="photo of Ademir" class="photo"/>
+				  <img src="https://www.rbsdirect.com.br/imagesrc/25273339.jpg?w=700" alt="photo of Ademir" class="photo"/>
 				
 				 <a class="email" href="mailto:ademir.mazer.jr@gmail.com">ademir.mazer.jr@gmail.com</a>
 				 <a class="url" href="http://ademir.winponta.com.br">http://ademir.winponta.com.br</a>
@@ -42,23 +42,22 @@
 
 		<div class="secao">
 			<h2>Pessoas mais importantes pra mim</h2>
-			<p>mãe</p>
-			<p>avós</p>
-			<p>esposa</p>
+			<p>mae</p>
+			<p>avos</p>
+			<p>namorada</p>
 		</div>
 
 		<div class="secao">
-			<h2> meus filmes favoritos</h2>
-			<p> o hobbit</p>
+			<h2>Meus filmes favoritos</h2>
+			<p>o hobbit</p>
+			<p>como eu era antes de voce</p>
 			<p>senhor dos aneis</p>
-			<p>como eu era antes de você</p>
 		</div>
 		
 		<div id="footnote">
 			
-			<li>Este site foi criado para a disciplina de Programação  do 2º Ano d do Colégio CQC</li>
+			<li>Este site foi criado para a disciplina de Programação  do 2º Ano  do Colégio CQC</li>
 		</div>		
 	</body>
 </html>
-
 
